# TAC-FUSE

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: qat_datasets.json
configs/assets/: visual_asset_sources.yaml
configs/foundry/: maven_api.yaml
configs/model_packages/: siglip2_expanded_vehicle_hpo_best.json
configs/training/: siglip2_field_conditions.yaml
docs/: alpha_test_plan.md  check_rtx_prereqs.sh  demo_runbook.md  problem_statement_alignment.md  siglip2_expanded_vehicle_classifier.md  two_to_five_minute_demo.md
scripts/: cache_visual_assets.py  check_classifier_package.py  check_edge_compute_bringup.sh  check_maven_foundry_env.py  check_npu_runtime.py  check_ray_runtime.py  check_strix_bringup.sh  fetch_siglip2_classifier_package.py  h100_classifier_train.py  inspect_fusion_spool.py  prepare_visual_assets.py  replay_sensor_bus.py  self_improve.py  write_classifier_cue.py  write_edge_compute_status.py  write_strix_compute_status.py
src/tac_fuse/: __init__.py  connectivity.py  denied_ops.py  foundry_export.py  mission_state.py  npu_siglip.py  npu_trainer.py  pov.py  power_posture.py  qat_data.py  ray_query.py  replay.py  rt_control.py
src/tac_fuse/assets/: __init__.py  catalog.py  (+1 more)
tasks/: alpha_test_polish_tasks.yaml  self_improve_tasks.yaml
tests/: test_alerting.py  test_alpha_test_plan.py  test_classifier_boundary.py  test_classifier_cue_writer.py  test_connectivity.py  test_edge_compute_status.py  test_foundry_export.py  test_local_c2_authority.py  test_local_sensor_ingest_bus.py  test_maven_foundry_config.py  test_mission_state.py  test_npu_siglip.py  test_npu_trainer_int8.py  test_offline_swarm_control.py  test_pov.py  test_power_posture.py  test_ray_query.py  test_replay.py  test_rt_control.py  test_self_improve_script.py  test_sensor_models.py  test_siglip2_model_package.py  test_strix_compute_status.py  test_visual_asset_download.py  test_zero_shot_vision.py
tests/visual/: tac-fuse.spec.js
web/: app.js  classifier_cue.js  edge_compute_status.js  index.html  strix_compute_status.js  styles.css
(+21 files in other folders)
