[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tac-fuse"
version = "0.1.0"
description = "Local-first edge C2 demo for disconnected drone operations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "TAC-FUSE contributors" }]
dependencies = ["pydantic>=2.10", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.8"]
npu = [
  "openvino>=2025.0",
  "optimum-intel>=1.23",
  "pillow>=10.4",
  "transformers>=4.53",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tac_fuse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
