[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tac-fuse"
version = "0.1.0"
description = "Local-first edge C2 demo for disconnected drone operations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "TAC-FUSE contributors" }]
dependencies = ["pydantic>=2.10", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.8"]
npu-runtime = [
  "numpy>=1.26",
  "openvino>=2025.0",
  "pillow>=10.4",
  "sentencepiece>=0.2",
  "transformers>=4.53",
]
npu = [
  "numpy>=1.26",
  "openvino>=2025.0",
  "optimum-intel>=1.23",
  "pillow>=10.4",
  "sentencepiece>=0.2",
  "transformers>=4.53",
]
classifier-runtime = [
    "pillow>=10.4",
    "protobuf>=4.25",
    "sentencepiece>=0.2",
    "torch>=2.6",
    "torchvision>=0.21",
    "transformers>=4.53",
]

[project.scripts]
tac-fuse-npu-trainer = "tac_fuse.npu_trainer:main"
tac-fuse-zero-shot = "tac_fuse.vision.zero_shot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tac_fuse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
